Bug 411272 - Not saving changes to Shortcuts
Summary: Not saving changes to Shortcuts
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 415518 441190 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-25 13:36 UTC by Alan Prescott
Modified: 2022-08-22 11:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Prescott 2019-08-25 13:36:45 UTC
SUMMARY
Ctrl-Ins is ambiguous. Deleted assignment to Copy as secondary shortcut. Saved current session and Quit. On restart the deleted (default) shortcut is restored

STEPS TO REPRODUCE
1. Set Copy secondary shortcut to None
2. Click OK, Save session and Quit
3. Restart KMyMoney

OBSERVED RESULT
Press Ctrl-Ins reports ambiguity and Configure Shortcuts shows Ctrl-Ins as secondary shortcut for Copy

EXPECTED RESULT
No Secondary shortcut for Copy

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-08-25 15:52:41 UTC
Ctrl-Ins is set as the alternate shortcut for copy in the system settings. Remove it from in system settings in case you want to remove the ambiguity and keeping the KMyMoney feature. Otherwise, feel free to change the shortcut in KMyMoney to a yet unused combination.
Comment 2 Alan Prescott 2019-08-25 18:26:49 UTC
That is the point - I have removed it. It just re-appears next time I start kmymoney.
Comment 3 Jack 2019-08-25 18:29:30 UTC
From where did you remove it?  Removing it from within KMM is not going to work, since that shortcut is not set by KMM, but by KDE itself.  You need to remove it through the SystemSettings app.
Comment 4 Alan Prescott 2019-08-25 18:43:27 UTC
I am doing this in KMM
KMM -> Settings -> Configure Shortcuts.
Click on Ctrl-Ins for Copy, Select Custom, None

Tried this with and without the following ...
Click on Manage Schemes, More Actions, Save Shortcuts to Scheme, message saying shortcut scheme successfully saved.

Click Ok

Close KMM, Open KMM, shortcuts unchanged.
Comment 5 Alan Prescott 2019-08-25 18:49:41 UTC
Ok, I think I understand, it's just very confusing since KMM offers the ability to remove Ctrl-Ins from Copy but actually can't actually do so.
Comment 6 Jack 2019-08-25 19:14:46 UTC
It does remove it from it's local copy.  But - when it restarts, it starts by using the system shortcuts.  

Thomas - might this be turned into a wishlist to indicate which shortcuts are actually set by KMM and which are inherited from the system?  I don't know if it is even possible to detect that.
Comment 7 Thomas Baumgart 2019-08-26 17:44:00 UTC
The whole shortcut handling is KDE framework stuff. I don't know of any source code in KMyMoney that provides this feature so there is not that much we can do.
Comment 8 jochen 2019-12-25 17:08:56 UTC
*** Bug 415518 has been marked as a duplicate of this bug. ***
Comment 9 jochen 2019-12-25 17:11:32 UTC
This KDE behaviour gives users of an AppImage version, which are not using KDE but something else a hard time...
Comment 10 Thomas Baumgart 2022-07-16 15:36:08 UTC
Git commit 06ee799191e22f0828a4b1f990166ecba2de8557 by Thomas Baumgart.
Committed on 16/07/2022 at 15:14.
Pushed by tbaumgart into branch 'master'.

Allow to override the default shortcut settings

M  +1    -1    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/commit/06ee799191e22f0828a4b1f990166ecba2de8557
Comment 11 Thomas Baumgart 2022-07-16 15:36:22 UTC
Git commit b063f634951a67f7dae5b39a7b0c8472527eb615 by Thomas Baumgart.
Committed on 16/07/2022 at 15:30.
Pushed by tbaumgart into branch '5.1'.

Allow to override the default shortcut settings
FIXED-IN: 5.1.3

(cherry picked from commit 06ee799191e22f0828a4b1f990166ecba2de8557)

M  +1    -1    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/commit/b063f634951a67f7dae5b39a7b0c8472527eb615
Comment 12 Thomas Baumgart 2022-07-16 15:45:38 UTC
*** Bug 441190 has been marked as a duplicate of this bug. ***
Comment 13 Thomas Baumgart 2022-08-22 06:21:05 UTC
*** Bug 441190 has been marked as a duplicate of this bug. ***
Comment 14 Jeff 2022-08-22 11:23:30 UTC
Thanks!

On Mon, Aug 22, 2022 at 2:21 AM Thomas Baumgart
<bugzilla_noreply@kde.org> wrote:
>
> https://bugs.kde.org/show_bug.cgi?id=411272
>
> --- Comment #13 from Thomas Baumgart <tbaumgart@kde.org> ---
> *** Bug 441190 has been marked as a duplicate of this bug. ***
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.