Allow to override the default shortcut settings

BUG: 411272
FIXED-IN: 5.1.3

(cherry picked from commit 06ee799191e22f0828a4b1f990166ecba2de8557)